# smrt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  asv.conf.json  format-code.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: benchmark.yml  publish.yml  pytest.yml
benchmarks/: b_core_interface.py  b_core_layer.py  b_core_result.py  b_core_sensor.py  b_core_snowpack.py  benchmarks.py  local_benchmarks.py
binder/: requirements.txt
doc/: Makefile  make.bat  rtd_requirements.txt
doc/source/: api_reference.rst  conf.py  developer_guidelines.rst  developer_stylerules.rst  index.rst  modules.rst  publish.rst  smrt.atmosphere.rst  smrt.atmosphere.simple_isotropic_atmosphere.rst  smrt.atmosphere.test_atmosphere.rst  smrt.core.check_numba.rst  smrt.core.error.rst  smrt.core.filelock.rst  smrt.core.fresnel.rst  smrt.core.globalconstants.rst  smrt.core.interface.rst  smrt.core.layer.rst  smrt.core.lib.rst  smrt.core.model.rst  smrt.core.plugin.rst  smrt.core.progressbar.rst  smrt.core.result.rst  smrt.core.rst  smrt.core.run_promise.rst  smrt.core.sensitivity_study.rst  smrt.core.sensor.rst  smrt.core.sensor_broken.rst  smrt.core.sensor_working.rst  smrt.core.snowpack.rst  smrt.core.substrate.rst  smrt.core.test_globalconstants.rst  smrt.core.test_interface.rst  smrt.core.test_layer.rst  smrt.core.test_result.rst  smrt.core.test_sensor.rst  smrt.core.test_snowpack.rst  smrt.emmodel.commonfunc.rst  smrt.emmodel.commontest.rst  smrt.emmodel.dmrt_qca_shortrange.rst  smrt.emmodel.dmrt_qcacp_shortrange.rst  (+79 more)
examples/: dmrt_multilayer.py  iba_multilayer.py  iba_onelayer.ipynb  iba_onelayer_example.py  iba_sea_ice.py  smrt_memls_legacy.py
scripts/: check-commit-msg.sh
smrt/: __init__.py
smrt/atmosphere/: __init__.py  pyrtlib_atmosphere.py  pyrtlib_climatology_atmosphere.py  pyrtlib_era5_atmosphere.py  simple_atmosphere.py  simple_isotropic_atmosphere.py  test_atmosphere.py
smrt/core/: __init__.py  atmosphere.py  check_numba.py  error.py  filelock.py  fresnel.py  globalconstants.py  interface.py  layer.py  lib.py  model.py  multiprocessing_runner.py  optional_numba.py  plugin.py  progressbar.py  result.py  run_promise.py  sensitivity_study.py  sensor.py  snowpack.py  substrate.py  terrain.py  test_globalconstants.py  test_interface.py  test_layer.py  test_lib.py  test_result.py  test_sensor.py  test_snowpack.py  vector3.py
smrt/emmodel/: __init__.py  common.py  commonfunc.py  commontest.py  dmrt_qca_shortrange.py  dmrt_qcacp_shortrange.py  dmrt_shortrange.py  effective_permittivity.py  iba.py  iba_maxwell_garnett.py  iba_original.py  nonescattering.py  nonscattering.py  prescribed_kskaeps.py  rayleigh.py  sce_common.py  sce_rechtsman08.py  sce_torquato21.py  sce_torquato21_shortrange.py  sft_rayleigh.py  symsce_torquato21.py  symsce_torquato21_shortrange.py  test_commonfunc.py  test_dmrt_shortrange.py  test_effective_permittivity.py  test_iba.py  test_iba_original.py  test_prescribed_kskaeps.py  test_rayleigh.py  test_sft_rayleigh.py  test_symsce_torquato21.py
smrt/inputs/: __init__.py  altimeter_list.py  lrm_altimeter_list.py  make_bedrock.py  make_medium.py  make_soil.py  sar_altimeter_list.py  sensor_list.py  test_make_bedrock.py  test_make_medium.py  test_make_soil.py  test_sensor_list.py
smrt/interface/: __init__.py  calibration_sphere.py  coherent_flat.py  flat.py  geometrical_optics.py  geometrical_optics_backscatter.py  iem_fung92.py  iem_fung92_brogioni10.py  iiem_fung02.py  iiem_fung2002.py  interface_utils.py  radar_calibration_sphere.py  test_geometrical_optics.py  test_iem_fung92.py  test_iem_fung92_brogioni10.py  test_iiem_fung02.py  test_iiem_fung2002.py  transparent.py  vector3.py
smrt/microstructure_model/: __init__.py  autocorrelation.py  exponential.py  gaussian_random_field.py  homogeneous.py  independent_sphere.py  sampled_autocorrelation.py  sticky_hard_spheres.py  test_exponential.py  test_sticky_hard_spheres.py  teubner_strey.py  unified_autocorrelation.py  unified_scaled_exponential.py  unified_sticky_hard_spheres.py  unified_teubner_strey.py
smrt/permittivity/: __init__.py  bedrock.py  brine.py  depolarization_factors.py  generic_mixing_formula.py  ice.py  permittivity_utils.py  saline_ice.py  saline_snow.py  saline_water.py  snow_mixing_formula.py  soil.py  test_depolarization_factors,.py  test_depolarization_factors.py  test_generic_mixing_formula.py  test_ice.py  test_saline_ice.py  test_saline_water.py  test_snow_mixing_formula.py  test_water.py  water.py  wetice.py  wetsnow.py
smrt/rtsolver/: __init__.py  dort.py  dort_nonormalization.py  dort_normalized.py  iterative_first.py  iterative_first_order.py  iterative_second_order.py  lrm_waveform_model.py  multifresnel_thermalemission.py  multifresnel_thermalemission_derivatives.py  nadir_lrm_altimetry.py  nadir_sar_altimetry.py  rtsolver_utils.py  streams.py  successive_order.py  test_dort.py  test_iterative_first.py  test_iterative_first_order.py  test_iterative_second_order.py  test_multifresnel_thermalemission.py  test_nadir_lrm_altimetry.py  test_rtsolver.py  (+3 more)
(+102 files in other folders)
