[project]
name = "smrt"
version = "1.2.1"
description = "The Snow Microwave Radiative Transfer (SMRT) model is a highly modular model to compute the thermal emission and backscattering coefficient of snowpacks and other cryospheric bodies in the microwave domain."
authors = ["Ghislain Picard <ghislain.picard@univ-grenoble-alpes.fr>", "Melody Sandells <melody.sandells@gmail.com>", "Henning Löwe <loewe@slf.ch>"]
homepage = "https://www.smrt-model.science/"
repository = "https://github.com/smrt-model/smrt"
documentation = "http://smrt.readthedocs.io/"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.13"
pandas = ">=0.20.3"
scipy = ">=1.0.0"
xarray = ">=0.10.3"
numba = ">=0.40"
joblib = ">=1.0.0"

[tool.poetry.dev-dependencies]
nosetest = ""


[build-system]
requires = ["poetry>=0.12",
    		"setuptools >= 48",
    "setuptools_scm[toml] >= 6.2",
    #"setuptools_scm_git_archive",
    #"wheel >= 0.29.0",
]

build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools_scm]
