[project]
name = "smrt"
dynamic = ["version"]
description = "The Snow Microwave Radiative Transfer (SMRT) model is a highly modular model to compute the thermal emission and backscattering coefficient of snowpacks and other cryospheric bodies in the microwave domain."
authors = [
            {name = "Ghislain Picard", email = "ghislain.picard@univ-grenoble-alpes.fr"},
            {name = "Melody Sandells", email = "melody.sandells@gmail.com"},
            {name = "Henning Löwe", email = "loewe@slf.ch"},
            ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy >= 1.13, <= 2.0.1",
    "pandas>=0.20.3",
    "scipy>=1.0.0",
    "xarray>=0.10.3",
    "numba>=0.40",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
    progressbar = ["tqdm"]
    pyrtlib = ["scikit-learn", "bs4", "netCDF4", "requests", "cdsapi", "cfgrib", "pyrtlib"]
    gsw = ["gsw"]


[project.urls]
Homepage = "https://http://smrt-model.science/l"
Issues = "https://github.com/smrt/smrt-model/issues"
Documentation = "http://smrt.readthedocs.io/"
Repository = "https://github.com/smrt-model/smrt.git"



[build-system]
requires = ["setuptools >= 48",
            "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['smrt']



[tool.ruff]
line-length = 120
target-version = "py310"
ignore = ["E741"]

[tool.ruff.pydocstyle]
convention = "numpy"   # TODO: changed to google

[tool.setuptools_scm]
