[project]
name = "smrt"
dynamic = ["version"]
description = "The Snow Microwave Radiative Transfer (SMRT) model is a highly modular model to compute the thermal emission and backscattering coefficient of snowpacks and other cryospheric bodies in the microwave domain."
authors = [
            {name = "Ghislain Picard", email = "ghislain.picard@univ-grenoble-alpes.fr"},
            {name = "Melody Sandells", email = "melody.sandells@gmail.com"},
            {name = "Henning Löwe", email = "loewe@slf.ch"},
            ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2,<3",
    "pandas>=2,<3",
    "scipy>=1,<2",
    "xarray>=2024",
    "numba>=0.58,<1",
    "joblib>=1.3.2,<2",
]

[project.optional-dependencies]
progressbar = ["tqdm"]
pyrtlib = ["scikit-learn", "bs4", "netCDF4", "requests", "cdsapi", "cfgrib", "pyrtlib"]
gsw = ["gsw"]

[dependency-groups]
dev = ["pytest", "ruff", "sphinx_rtd_theme", "Sphinx>=1.6"]
benchmark = ["asv"]


[project.urls]
Homepage = "https://http://smrt-model.science/l"
Issues = "https://github.com/smrt/smrt-model/issues"
Documentation = "http://smrt.readthedocs.io/"
Repository = "https://github.com/smrt-model/smrt.git"



[build-system]
requires = ["setuptools >= 62",
            "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['smrt']

[tool.ruff]
line-length = 120
target-version = "py310"
lint.ignore = ["E741"]
lint.pydocstyle.convention = "google"

[tool.setuptools_scm]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
smrt = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
gsw = { features = ["gsw"], solve-group = "default" }
progressbar = { features = ["progressbar"], solve-group = "default" }
pyrtlib = { features = ["pyrtlib"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
benchmark = { features = ["benchmark"], solve-group = "default" }

[tool.pixi.tasks]
